--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.0.1",
+    "gatsby": "^1.9.261",
     "gatsby-link": "^1.0.1",
-    "gatsby-plugin-react-helmet": "^1.0.1"
+    "gatsby-plugin-react-helmet": "^1.0.1",
+    "react-async-script": "^0.9.1",
+    "react-google-recaptcha": "^0.11.1"
   },
   "devDependencies": {
+    "dotenv": "^5.0.1",
     "gh-pages": "^0.12.0"
   },
   "keywords": [
